feat: add update comments task
